# fastapi-gatekeeper

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
data/dex/: dex-config.yaml
src/: .env.sample  routes.sample.yaml  run.py
src/app/: __init__.py  config.py  custom_routes.py  exception_handlers.py  logger.py  main.py  oauth.py  proxy.py  routes.py  settings.py  user_auth.py
